--- a/Pages/Posts/EditPost.cshtml
+++ b/Pages/Posts/EditPost.cshtml
@@ -12,6 +12,7 @@
 
 <div style="margin-top: 100px;" class="d-flex flex-column">
     <div class="post border shadow">
+        <h1 class="m-3 p-3 fw-bolder border-bottom">Edit Post</h1>
         <form class="p-3" method="post" enctype="multipart/form-data">
             <div class="d-flex w-100 justify-content-between mb-3">
                 <div class="d-flex align-items-center gap-3 ">
