--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -61,7 +61,10 @@
                 <div class="text-start mt-3 px-3">
                     @p.Content?.Description
                 </div>
-                <img class="photo" src="/media/@p.Content?.ContentUrl" />
+                @if (p?.Content?.ContentUrl != null)
+                {
+                    <img class="photo" src="/media/@p.Content?.ContentUrl" />
+                }
                 <div class="p-3 d-flex justify-content-between">
                     <span>
                         <i class="fa-solid fa-heart"></i>
