--- a/Pages/Profile.cshtml
+++ b/Pages/Profile.cshtml
@@ -45,7 +45,7 @@
         <div class="row">
             <div class="col-md-5 d-flex flex-column justify-content-between">
                 <div class="card profile-card shadow">
-                    <img src="/media/@Model.User.Avatar" class="card-img-top avatar" alt="Avatar">
+                    <img src="/media/@Model.User.Avatar" class="card-img-top profile-avatar" alt="Avatar">
                 </div>
                 @if (user?.UserId == Model.User.UserId)
                 {
