--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" href="/Profile?id=@user.UserId">My Profile</a></li>
-                            <li><a class="dropdown-item" asp-area="" asp-page="/Posts/Index">My Posts</a></li>
+                            <li><a class="dropdown-item" href="/Posts/Index?id=@user.UserId">My Posts</a></li>
                             <li><a class="dropdown-item" href="/Friends/MyFriends?id=@user.UserId">My Friends</a></li>
                             <li><a class="dropdown-item" asp-area="" asp-page="/Logout">Logout</a></li>
                         </ul>
@@ -110,7 +110,7 @@
         <i class="fa-solid fa-pen-to-square"></i>
     </a>
 
-    <a role="button" asp-area="" asp-page="/Friends/Index" class="btn btn-lg btn-dark btn-friends d-flex gap-3 align-items-center">
+    <a role="button" href="/Friends/MyFriends?id=@user?.UserId" class="btn btn-lg btn-dark btn-friends d-flex gap-3 align-items-center">
         <span>Friends</span>
         <i class="fa-solid fa-user-group"></i>
     </a>
